Add hubspot embed code

--- a/index.html
+++ b/index.html
@@ -523,6 +523,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		})(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 	</script>
 
+	<!-- Start of HubSpot Embed Code -->
+	<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/6259785.js"></script>
+	<!-- End of HubSpot Embed Code -->
+
 	</body>
 </html>
 
