Add google analytics

--- a/index.html
+++ b/index.html
@@ -527,6 +527,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/6259785.js"></script>
 	<!-- End of HubSpot Embed Code -->
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145423806-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-145423806-1');
+	</script>
+
+
 	</body>
 </html>
 
