--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Take on your biggest projects and goals</h2>
-								<p>with Unapp's high quality features</p>
-								<p><a href="gallery.html" class="btn btn-primary btn-lg btn-custom">Get premium</a></p>
+								<h2>Tudo o que você precisa para rentabilizar sua carteira em um só lugar!</h2>
+								<p>Com os melhores métodos quantitativos do mercado.</p>
 							</div>
 						</div>
 					</div>
