--- a/index.html
+++ b/index.html
@@ -64,17 +64,13 @@
 							<ul>
 								<li class="active"><a href="index.html">Home</a></li>
 								<li class="has-dropdown">
-									<a href="work.html">Works</a>
+									<a href="methods.html">Métodos</a>
 									<ul class="dropdown">
-										<li><a href="work-grid.html">Works grid with text</a></li>
-										<li><a href="work-grid-without-text.html">Works grid w/o text</a></li>
+										<li><a href="long_and_short.html">Long & Short</a></li>
 									</ul>
 								</li>
-								<li><a href="services.html">Services</a></li>
-								<li><a href="blog.html">Blog</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="shop.html">Shop</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="pricing.html">Preços</a></li>
+								<li><a href="contact.html">Contato</a></li>								
 							</ul>
 						</div>
 					</div>
@@ -354,7 +350,7 @@
 			</div>
 		</div>
 
-		<div class="colorlib-pricing">
+		<div class="colorlib-pricing" id="price">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
