--- a/methods.html
+++ b/methods.html
@@ -85,8 +85,8 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Contato</h2>
-								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Contato</span></p>
+								<h2>Métodos quantitativos</h2>
+								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Métodos</span></p>
 							</div>
 						</div>
 					</div>
@@ -94,74 +94,119 @@
 			</div>
 		</section>
 
-		<div id="colorlib-contact">
+		<div class="colorlib-work">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-4 col-md-push-8 animate-box">
-						<h2>Contact Information</h2>
-						<div class="row">
-							<div class="col-md-12">
-								<div class="contact-info-wrap-flex">
-									<div class="con-info">
-										<p><span><i class="icon-location-2"></i></span> 198 West 21th Street, <br> Suite 721 New York NY 10016</p>
+					<div class="col-md-12">
+						<div class="work-flex">
+							<div class="half animate-box">
+								<div class="row no-gutters">
+									<div class="col-md-12 col-md-push-12 no-gutters">
+										<a href="#" class="work-img" style="background-image: url(images/work-1.jpg);"></a>
 									</div>
-									<div class="con-info">
-										<p><span><i class="icon-phone3"></i></span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-									</div>
-									<div class="con-info">
-										<p><span><i class="icon-paperplane"></i></span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-									</div>
-									<div class="con-info">
-										<p><span><i class="icon-globe"></i></span> <a href="#">yourwebsite.com</a></p>
+								</div>
+							</div>
+							<div class="half animate-box">
+								<div class="row no-gutters">
+									<div class="col-md-12 col-md-pull-12 no-gutters">
+										<div class="display-t desc">
+											<div class="display-tc">
+												<h2><a href="long_and_short.html">Long & Short</a></h2>
+												<p>Opere pelo mais novo método de Long&Short do mercado brasileiro. Opere de forma ágil e precisa com controle de stops, parametrização de entradas parciais e gerenciamento de carteira em tempo real. E o melhor, tudo isso em um só lugar!</p>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-8 col-md-pull-4 animate-box">
-						<h2>Get In Touch</h2>
-						<form action="#">
-							<div class="row form-group">
-								<div class="col-md-6">
-									<!-- <label for="fname">First Name</label> -->
-									<input type="text" id="fname" class="form-control" placeholder="Your firstname">
-								</div>
-								<div class="col-md-6">
-									<!-- <label for="lname">Last Name</label> -->
-									<input type="text" id="lname" class="form-control" placeholder="Your lastname">
-								</div>
-							</div>
 
-							<div class="row form-group">
-								<div class="col-md-12">
-									<!-- <label for="email">Email</label> -->
-									<input type="text" id="email" class="form-control" placeholder="Your email address">
+					<div class="col-md-12">
+						<div class="work-flex">
+							<div class="half animate-box">
+								<div class="row no-gutters">
+									<div class="col-md-12 no-gutters">
+										<a href="#" class="work-img" style="background-image: url(images/work-2.jpg);"></a>
+									</div>
 								</div>
 							</div>
+							<div class="half animate-box">
+								<div class="row no-gutters">
+									<div class="col-md-12 no-gutters">
+										<div class="display-t desc">
+											<div class="display-tc">
+												<h2><a href="#">Método 2</a></h2>
+												<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
-							<div class="row form-group">
-								<div class="col-md-12">
-									<!-- <label for="subject">Subject</label> -->
-									<input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
+					<div class="col-md-12">
+						<div class="work-flex">
+							<div class="half animate-box">
+								<div class="row no-gutters">
+									<div class="col-md-12 col-md-push-12 no-gutters">
+										<a href="#" class="work-img" style="background-image: url(images/work-3.jpg);"></a>
+									</div>
 								</div>
 							</div>
+							<div class="half animate-box">
+								<div class="row no-gutters">
+									<div class="col-md-12 col-md-pull-12 no-gutters">
+										<div class="display-t desc">
+											<div class="display-tc">
+												<h2><a href="#">A beige chair at a basket</a></h2>
+												<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
-							<div class="row form-group">
-								<div class="col-md-12">
-									<!-- <label for="message">Message</label> -->
-									<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
+					<div class="col-md-12">
+						<div class="work-flex">
+							<div class="half animate-box">
+								<div class="row no-gutters">
+									<div class="col-md-12 no-gutters">
+										<a href="#" class="work-img" style="background-image: url(images/work-4.jpg);"></a>
+									</div>
 								</div>
 							</div>
-							<div class="form-group">
-								<input type="submit" value="Send Message" class="btn btn-primary">
+							<div class="half animate-box">
+								<div class="row no-gutters">
+									<div class="col-md-12 no-gutters">
+										<div class="display-t desc">
+											<div class="display-tc">
+												<h2><a href="#">A beige chair at a small white desk</a></h2>
+												<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
-						</form>		
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12 text-center">
+						<ul class="pagination">
+							<li class="disabled"><a href="#">&laquo;</a></li>
+							<li class="active"><a href="#">1</a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a href="#">4</a></li>
+							<li><a href="#">&raquo;</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
-
-		<div id="map" class="colorlib-map"></div>
 
 		<footer id="colorlib-footer">
 			<div class="container">
@@ -271,9 +316,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<script src="js/magnific-popup-options.js"></script>
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
-	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
