--- a/long_and_short.html
+++ b/long_and_short.html
@@ -58,23 +58,19 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<div id="colorlib-logo"><a href="index.html">Unapp</a></div>
+							<div id="colorlib-logo"><a href="index.html">You Quant</a></div>
 						</div>
 						<div class="col-md-10 text-right menu-1">
 							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li class="has-dropdown active">
-									<a href="work.html">Works</a>
+								<li class="active"><a href="index.html">Home</a></li>
+								<li class="has-dropdown">
+									<a href="methods.html">Métodos</a>
 									<ul class="dropdown">
-										<li><a href="work-grid.html">Works grid with text</a></li>
-										<li><a href="work-grid-without-text.html">Works grid w/o text</a></li>
+										<li><a href="long_and_short.html">Long & Short</a></li>
 									</ul>
 								</li>
-								<li><a href="services.html">Services</a></li>
-								<li><a href="blog.html">Blog</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="shop.html">Shop</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="pricing.html">Preços</a></li>
+								<li><a href="contact.html">Contato</a></li>								
 							</ul>
 						</div>
 					</div>
@@ -89,8 +85,12 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Portfolio grid with text</h2>
-								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Work grid with text</span></p>
+								<h2>Método Long & Short</h2>
+								<p class="breadcrumbs">
+									<span><a href="index.html">Home</a></span> 
+									<span><a href="methods.html">Métodos</a></span> 
+									<span>Long & Short</span>
+								</p>
 							</div>
 						</div>
 					</div>
