--- a/pricing.html
+++ b/pricing.html
@@ -58,23 +58,19 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<div id="colorlib-logo"><a href="index.html">Unapp</a></div>
+							<div id="colorlib-logo"><a href="index.html">You Quant</a></div>
 						</div>
 						<div class="col-md-10 text-right menu-1">
 							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li class="has-dropdown active">
-									<a href="work.html">Works</a>
+								<li class="active"><a href="index.html">Home</a></li>
+								<li class="has-dropdown">
+									<a href="methods.html">Métodos</a>
 									<ul class="dropdown">
-										<li><a href="work-grid.html">Works grid with text</a></li>
-										<li><a href="work-grid-without-text.html">Works grid w/o text</a></li>
+										<li><a href="long_and_short.html">Long & Short</a></li>
 									</ul>
 								</li>
-								<li><a href="services.html">Services</a></li>
-								<li><a href="blog.html">Blog</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="shop.html">Shop</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="pricing.html">Preços</a></li>
+								<li><a href="contact.html">Contato</a></li>								
 							</ul>
 						</div>
 					</div>
@@ -89,8 +85,8 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Portfolio</h2>
-								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Work</span></p>
+								<h2>Preços</h2>
+								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Preços</span></p>
 							</div>
 						</div>
 					</div>
@@ -98,115 +94,74 @@
 			</div>
 		</section>
 
-		<div class="colorlib-work">
+		<div class="colorlib-services">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12">
-						<div class="work-flex">
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 col-md-push-12 no-gutters">
-										<a href="#" class="work-img" style="background-image: url(images/work-1.jpg);"></a>
-									</div>
-								</div>
-							</div>
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 col-md-pull-12 no-gutters">
-										<div class="display-t desc">
-											<div class="display-tc">
-												<h2><a href="#">A beige chair at a basket</a></h2>
-												<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-											</div>
-										</div>
-									</div>
-								</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-browser"></i>
+							</span>
+							<div class="desc">
+								<h3>Create your own template</h3>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div>
 						</div>
 					</div>
-
-					<div class="col-md-12">
-						<div class="work-flex">
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 no-gutters">
-										<a href="#" class="work-img" style="background-image: url(images/work-2.jpg);"></a>
-									</div>
-								</div>
-							</div>
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 no-gutters">
-										<div class="display-t desc">
-											<div class="display-tc">
-												<h2><a href="#">A beige chair at a small white desk</a></h2>
-												<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-											</div>
-										</div>
-									</div>
-								</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-download"></i>
+							</span>
+							<div class="desc">
+								<h3>Automatic Backup Data</h3>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div>
 						</div>
 					</div>
-
-					<div class="col-md-12">
-						<div class="work-flex">
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 col-md-push-12 no-gutters">
-										<a href="#" class="work-img" style="background-image: url(images/work-3.jpg);"></a>
-									</div>
-								</div>
-							</div>
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 col-md-pull-12 no-gutters">
-										<div class="display-t desc">
-											<div class="display-tc">
-												<h2><a href="#">A beige chair at a basket</a></h2>
-												<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-											</div>
-										</div>
-									</div>
-								</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-layers"></i>
+							</span>
+							<div class="desc">
+								<h3>Page Builder</h3>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div>
 						</div>
 					</div>
-
-					<div class="col-md-12">
-						<div class="work-flex">
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 no-gutters">
-										<a href="#" class="work-img" style="background-image: url(images/work-4.jpg);"></a>
-									</div>
-								</div>
-							</div>
-							<div class="half animate-box">
-								<div class="row no-gutters">
-									<div class="col-md-12 no-gutters">
-										<div class="display-t desc">
-											<div class="display-tc">
-												<h2><a href="#">A beige chair at a small white desk</a></h2>
-												<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-											</div>
-										</div>
-									</div>
-								</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-video"></i>
+							</span>
+							<div class="desc">
+								<h3>Watch tutorial</h3>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 text-center">
-						<ul class="pagination">
-							<li class="disabled"><a href="#">&laquo;</a></li>
-							<li class="active"><a href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#">&raquo;</a></li>
-						</ul>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-gears"></i>
+							</span>
+							<div class="desc">
+								<h3>Help &amp; Support</h3>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-adjustments"></i>
+							</span>
+							<div class="desc">
+								<h3>Lots of features</h3>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
