--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<i class="icon-browser"></i>
 							</span>
 							<div class="desc">
-								<h3>Create your own template</h3>
+								<h3>Long & Short por Cointegração</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div>
 						</div>
@@ -145,7 +145,7 @@
 								<i class="icon-download"></i>
 							</span>
 							<div class="desc">
-								<h3>Automatic Backup Data</h3>
+								<h3>Opções por Volatilidade</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div>
 						</div>
@@ -156,7 +156,7 @@
 								<i class="icon-layers"></i>
 							</span>
 							<div class="desc">
-								<h3>Page Builder</h3>
+								<h3>Juros Futuro (DI)</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div>
 						</div>
