--- a/index.html
+++ b/index.html
@@ -189,23 +189,23 @@
 					</div>
 					<div class="col-md-7 animate-box">
 						<div class="desc">
-							<h2>Real template creation</h2>
+							<h2>Robô Long & Short por Cointegração</h2>
 							<div class="features">
 								<span class="icon"><i class="icon-lightbulb"></i></span>
 								<div class="f-desc">
-									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+									<p>Long & Short consiste em uma operação simultânea em dois ativos diferentes, na qual o investidor mantêm uma posição vendida em um ativo e comprada no outro no intuito de obter um resíduo financeiro momentâneo entre os dois ativos.</p>
 								</div>
 							</div>
 							<div class="features">
 								<span class="icon"><i class="icon-circle-compass"></i></span>
 								<div class="f-desc">
-									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name</p>
+									<p>Por estar comprado em um ativo e vendido no outro, o investidor diminui o risco de mercado de sua carteira, ganhando na alta ou baixa do mercado.</p>
 								</div>
 							</div>
 							<div class="features">
 								<span class="icon"><i class="icon-beaker"></i></span>
 								<div class="f-desc">
-									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+									<p>Opere pelo método quantitativo mais novo do mercado brasileiro. Opere de forma ágil e precisa com controle de risco automático, parametrização de entradas parciais e gerenciamento de carteira em tempo real. E o melhor, tudo isso em um só lugar!</p>
 								</div>
 							</div>
 							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i class="icon-arrow-right3"></i></a></p>
@@ -218,23 +218,23 @@
 					</div>
 					<div class="col-md-7 col-md-pull-5 animate-box">
 						<div class="desc">
-							<h2>Finish template creation</h2>
+							<h2>Robô de Opções por Volatilidade</h2>
 							<div class="features">
 								<span class="icon"><i class="icon-lightbulb"></i></span>
 								<div class="f-desc">
-									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+									<p>O mercado de opções é um dos mercados mais facinantes do mercado financeiro. Nele é possível montar infinitas estratégias estruturadas.</p>
 								</div>
 							</div>
 							<div class="features">
 								<span class="icon"><i class="icon-circle-compass"></i></span>
 								<div class="f-desc">
-									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name</p>
+									<p>Analise as gregas das opções dos ativos mais líquidos do mercado, tenha acesso ao histórico de volatilidade implícita de cada ativo. Compare a volatilidade implícita com o Garch, IV Rank e IV Percentil e estruture a melhor estratégia para cada momento de mercado. </p>
 								</div>
 							</div>
 							<div class="features">
 								<span class="icon"><i class="icon-beaker"></i></span>
 								<div class="f-desc">
-									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+									<p>Abra operações por diferenças de spreads ou por diferenças de volatilidade. Monte estratégias com o ativo e proteja sua carteira de maneira simples e intuitiva.</p>
 								</div>
 							</div>
 							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i class="icon-arrow-right3"></i></a></p>
