--- a/methods.html
+++ b/methods.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>unapp Template</title>
+	<title>YOU QUANT - Long&Short</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -64,7 +64,7 @@
 							<ul>
 								<li class="active"><a href="index.html">Home</a></li>
 								<li class="has-dropdown">
-									<a href="methods.html">Métodos</a>
+									<a href="methods.html">Robôs</a>
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
 									</ul>
@@ -85,7 +85,7 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Métodos quantitativos</h2>
+								<h2>Long & Short por Cointegração</h2>
 								<p class="breadcrumbs"><span><a href="index.html">Home</a></span> <span>Métodos</span></p>
 							</div>
 						</div>
@@ -111,8 +111,8 @@
 									<div class="col-md-12 col-md-pull-12 no-gutters">
 										<div class="display-t desc">
 											<div class="display-tc">
-												<h2><a href="long_and_short.html">Long & Short</a></h2>
-												<p>Opere pelo mais novo método de Long&Short do mercado brasileiro. Opere de forma ágil e precisa com controle de stops, parametrização de entradas parciais e gerenciamento de carteira em tempo real. E o melhor, tudo isso em um só lugar!</p>
+												<h2><a href="long_and_short.html">Long & Short por Cointegração</a></h2>
+												<p>No mercado financeiro, existe basicamente duas formas diferentes de se operar Long & Short. A primeira, Long & Short por Correlação, opera-se pela razão de preços entre dois ativos, sejam eles intrasetorias ou ON X PN. Neste métodos calcula-se a razão entre os dois ativos em determinados períodos, calcula-se também a média e desvio padrão desta razão, também chamada de ratio. </p>
 											</div>
 										</div>
 									</div>
