--- a/methods.html
+++ b/methods.html
@@ -136,7 +136,7 @@
 										<div class="display-t desc">
 											<div class="display-tc">
 												<h2><a href="#">Método 2</a></h2>
-												<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
+												<p>Even the all-powerfgggul Pointing has no cskjkdsontrol about the blind texts it is an almost unorthographic life</p>
 											</div>
 										</div>
 									</div>
