--- a/methods.html
+++ b/methods.html
@@ -160,7 +160,7 @@
 										<div class="display-t desc">
 											<div class="display-tc">
 												<h2><a href="#">A beige chair at a basket</a></h2>
-												<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
+												<p>Even the all-powerful Pointing has no control about the lkdsjnjdsjdsdsjklsj texts it is an almost unorthographic life</p>
 											</div>
 										</div>
 									</div>
