--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<ul>
 								<li class="active"><a href="index.html">Home</a></li>
 								<li class="has-dropdown">
-									<a href="methods.html">Métodos</a>
+									<a href="methods.html">Robôs</a>
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
 									</ul>
@@ -135,7 +135,7 @@
 							</span>
 							<div class="desc">
 								<h3>Long & Short por Cointegração</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<p>Far far away, behind the word moun  tains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div>
 						</div>
 					</div>
