--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							</span>
 							<div class="desc">
 								<h3>Long & Short por Cointegração</h3>
-								<p>Far far away, behind the word moun  tains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<p>Far far away, behind ssss word moun tains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div>
 						</div>
 					</div>
