--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<span class="icon">
-								<i class="icon-browser"></i>
+								<i class="icon-bargraph"></i>
 							</span>
 							<div class="desc">
 								<h3>Long & Short por Cointegração</h3>
