--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<span class="icon">
-								<i class="icon-download"></i>
+								<i class="icon-grid2"></i>
 							</span>
 							<div class="desc">
 								<h3>Opções por Volatilidade</h3>
