--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<span class="icon">
-								<i class="icon-layers"></i>
+								<i class="icon-grid-2"></i>
 							</span>
 							<div class="desc">
 								<h3>Juros Futuro (DI)</h3>
