--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
 							<ul>
 								<li class="active"><a href="index.html">Home</a></li>
 								<li class="has-dropdown">
-									<a href="methods.html">Métodos</a>
+									<a href="methods.html">Robôs</a>
 									<ul class="dropdown">
 										<li><a href="long_and_short.html">Long & Short</a></li>
+										<li><a href="mercado_de_opcoes.html">Mercado de Opcões</a></li>
+										<li><a href="mercado_de_juros.html">Mercado Juros</a></li>
 									</ul>
 								</li>
 								<li><a href="pricing.html">Preços</a></li>
@@ -131,33 +133,55 @@
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<span class="icon">
-								<i class="icon-browser"></i>
+								<i class="icon-linegraph"></i>
 							</span>
 							<div class="desc">
 								<h3>Long & Short por Cointegração</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<p>Método quantitativo mais utilizado por grandes bancos e fundos de investimentos. Permite ao investidor determinar se as séries temporais de preços das ações possuem ou não relação ao longo prazo.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<span class="icon">
-								<i class="icon-grid"></i>
+								<i class="icon-bargraph"></i>
 							</span>
 							<div class="desc">
-								<h3>Opções por Volatilidade</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<h3>Long & Short por Filtro de Kalman</h3>
+								<p>Seu propósito é utilizar medições de grandezas realizadas ao longo do tempo e gerar resultados que tendam a se aproximar dos valores reais das grandezas medidas e valores associados.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<span class="icon">
-								<i class="icon-grid-2"></i>
+								<i class="icon-strategy"></i>
 							</span>
 							<div class="desc">
-								<h3>Juros Futuro (DI)</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<h3>Long & Short por Autocorrelação</h3>
+								<p>Observe num determinado instante de tempo a relação entre o preço atual da ação e o seu histórico de preço em diferentes períodos de tempo. </p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-pie-graph"></i>
+							</span>
+							<div class="desc">
+								<h3>Mercado de Opções por Volatilidade</h3>
+								<p>Analise as gregas das opções dos ativos mais líquidos do mercado. Compare a volatilidade implícita com o Garch, IV Rank e IV Percentil e estruture a melhor estratégia para cada momento de mercado. .</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-bar-graph"></i>
+							</span>
+							<div class="desc">
+								<h3>Mercado de Juros Futuro (DI)</h3>
+								<p>Estruture operações em DI Futuro aproveite dos principais eventos do mercado para alacancar seus investimentos.</p>
 							</div>
 						</div>
 					</div>
@@ -189,7 +213,7 @@
 					</div>
 					<div class="col-md-7 animate-box">
 						<div class="desc">
-							<h2>Robô Long & Short por Cointegração</h2>
+							<h2>Robô Long & Short</h2>
 							<div class="features">
 								<span class="icon"><i class="icon-lightbulb"></i></span>
 								<div class="f-desc">
@@ -235,6 +259,35 @@
 								<span class="icon"><i class="icon-beaker"></i></span>
 								<div class="f-desc">
 									<p>Abra operações por diferenças de spreads ou por diferenças de volatilidade. Monte estratégias com o ativo e proteja sua carteira de maneira simples e intuitiva.</p>
+								</div>
+							</div>
+							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i class="icon-arrow-right3"></i></a></p>
+						</div>
+					</div>
+				</div>
+				<div class="row mobile-wrap">
+					<div class="col-md-5 animate-box">
+						<div class="mobile-img" style="background-image: url(images/mobile-2.jpg);"></div>
+					</div>
+					<div class="col-md-7 animate-box">
+						<div class="desc">
+							<h2>Robô para Juros Futuro (DI)</h2>
+							<div class="features">
+								<span class="icon"><i class="icon-lightbulb"></i></span>
+								<div class="f-desc">
+									<p>Long & Short consiste em uma operação simultânea em dois ativos diferentes, na qual o investidor mantêm uma posição vendida em um ativo e comprada no outro no intuito de obter um resíduo financeiro momentâneo entre os dois ativos.</p>
+								</div>
+							</div>
+							<div class="features">
+								<span class="icon"><i class="icon-circle-compass"></i></span>
+								<div class="f-desc">
+									<p>Por estar comprado em um ativo e vendido no outro, o investidor diminui o risco de mercado de sua carteira, ganhando na alta ou baixa do mercado.</p>
+								</div>
+							</div>
+							<div class="features">
+								<span class="icon"><i class="icon-beaker"></i></span>
+								<div class="f-desc">
+									<p>Opere pelo método quantitativo mais novo do mercado brasileiro. Opere de forma ágil e precisa com controle de risco automático, parametrização de entradas parciais e gerenciamento de carteira em tempo real. E o melhor, tudo isso em um só lugar!</p>
 								</div>
 							</div>
 							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i class="icon-arrow-right3"></i></a></p>
