--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 								<i class="icon-linegraph"></i>
 							</span>
 							<div class="desc">
-								<h3>Long & Short por Cointegração</h3>
-								<p>Método quantitativo mais utilizado por grandes bancos e fundos de investimentos. Permite ao investidor determinar se as séries temporais de preços das ações possuem ou não relação ao longo prazo.</p>
+								<h3>Dashboard</h3>
+								<p>Acompanhe as principais informações de sua carteira, posições abertas, lucros, prejuízos, taxas e muito mais.</p>
 							</div>
 						</div>
 					</div>
@@ -147,41 +147,56 @@
 								<i class="icon-bargraph"></i>
 							</span>
 							<div class="desc">
-								<h3>Long & Short por Filtro de Kalman</h3>
-								<p>Seu propósito é utilizar medições de grandezas realizadas ao longo do tempo e gerar resultados que tendam a se aproximar dos valores reais das grandezas medidas e valores associados.</p>
+								<h3>Relatórios</h3>
+								<p>Acesse relatórios de suas operações. Visualize e exporte o histórico de cada operação.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<span class="icon">
-								<i class="icon-strategy"></i>
+								<i class="icon-lock"></i>
 							</span>
 							<div class="desc">
-								<h3>Long & Short por Autocorrelação</h3>
-								<p>Observe num determinado instante de tempo a relação entre o preço atual da ação e o seu histórico de preço em diferentes períodos de tempo. </p>
+								<h3>Segurança</h3>
+								<p>Opere de forma segura e sem preocupação. Utilizamos o mesmo sistema de tokens utilizados nos bancos.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-pie-chart"></i>
+							</span>
+							<div class="desc">
+								<h3>Gráficos</h3>
+								<p>Visualize diversos gráficos e histórico intraday das principais variáveis de cada método quantitativo. Exemplo: volatilidade implícita, Garch, desvios intraday, resíduos etc.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<span class="icon">
-								<i class="icon-pie-graph"></i>
+								<i class="icon-search2"></i>
 							</span>
 							<div class="desc">
-								<h3>Mercado de Opções por Volatilidade</h3>
-								<p>Analise as gregas das opções dos ativos mais líquidos do mercado. Compare a volatilidade implícita com o Garch, IV Rank e IV Percentil e estruture a melhor estratégia para cada momento de mercado. .</p>
+								<h3>Filtros</h3>
+								<p>Faça buscas personalizadas e salve seus filtros favoritos. Filtre pares por setor, volatilidade ou critério de cálculo.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 text-center animate-box">
 						<div class="services">
 							<span class="icon">
-								<i class="icon-bar-graph"></i>
+								<i class="icon-genius"></i>
 							</span>
 							<div class="desc">
-								<h3>Mercado de Juros Futuro (DI)</h3>
-								<p>Estruture operações em DI Futuro aproveite dos principais eventos do mercado para alacancar seus investimentos.</p>
+								<h3>Automatização de ordens</h3>
+								<p>Automatize ordens configurando os parâmetros de gain/loss, vencimento da ordem, tipo de saída (por financeiro, desvio ou spread) com entradas/saídas fracionadas ou a mercado.</p>
 							</div>
 						</div>
 					</div>
@@ -193,8 +208,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-						<h2>Collaborate with your design team in a new way</h2>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+						<h2>Conheça a melhor plataforma quantitativa do mercado</h2>
+						<p>Saia dos métodos convencionais de investimento e opere de forma profisional como os grandes fundos de investimentos.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -217,22 +232,22 @@
 							<div class="features">
 								<span class="icon"><i class="icon-lightbulb"></i></span>
 								<div class="f-desc">
-									<p>Long & Short consiste em uma operação simultânea em dois ativos diferentes, na qual o investidor mantêm uma posição vendida em um ativo e comprada no outro no intuito de obter um resíduo financeiro momentâneo entre os dois ativos.</p>
+									<p>Long & Short consiste em uma operação simultânea em dois ativos distintos, na qual o investidor mantêm uma posição vendida em um ativo e comprada no outro no intuito de operar o retorno à média do resíduo financeiro momentâneo entre os dois ativos.</p>
 								</div>
 							</div>
 							<div class="features">
 								<span class="icon"><i class="icon-circle-compass"></i></span>
 								<div class="f-desc">
-									<p>Por estar comprado em um ativo e vendido no outro, o investidor diminui o risco de mercado de sua carteira, ganhando na alta ou baixa do mercado.</p>
+									<p>Por estar comprado em um ativo e vendido no outro, o investidor diminui o risco de mercado (risco sistêmico) de sua carteira, ganhando na alta ou baixa do mercado.</p>
 								</div>
 							</div>
 							<div class="features">
 								<span class="icon"><i class="icon-beaker"></i></span>
 								<div class="f-desc">
-									<p>Opere pelo método quantitativo mais novo do mercado brasileiro. Opere de forma ágil e precisa com controle de risco automático, parametrização de entradas parciais e gerenciamento de carteira em tempo real. E o melhor, tudo isso em um só lugar!</p>
+									<p>Opere pelo método quantitativo mais novo do mercado brasileiro, de forma ágil e precisa, através de um controle de risco automático, parametrização de entradas parciais e gerenciamento de carteira em tempo real. E o melhor, tudo isso em um só lugar!</p>
 								</div>
 							</div>
-							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i class="icon-arrow-right3"></i></a></p>
+							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Conhecer mais <i class="icon-arrow-right3"></i></a></p>
 						</div>
 					</div>
 				</div>
@@ -242,11 +257,11 @@
 					</div>
 					<div class="col-md-7 col-md-pull-5 animate-box">
 						<div class="desc">
-							<h2>Robô de Opções por Volatilidade</h2>
+							<h2>Robô Opções por Volatilidade</h2>
 							<div class="features">
 								<span class="icon"><i class="icon-lightbulb"></i></span>
 								<div class="f-desc">
-									<p>O mercado de opções é um dos mercados mais facinantes do mercado financeiro. Nele é possível montar infinitas estratégias estruturadas.</p>
+									<p>Estruture e execute as melhores estratégias de acordo com o momento de mercado, faça análises de suas operações de forma precisa e segura.</p>
 								</div>
 							</div>
 							<div class="features">
@@ -261,7 +276,7 @@
 									<p>Abra operações por diferenças de spreads ou por diferenças de volatilidade. Monte estratégias com o ativo e proteja sua carteira de maneira simples e intuitiva.</p>
 								</div>
 							</div>
-							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i class="icon-arrow-right3"></i></a></p>
+							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Conhecer mais <i class="icon-arrow-right3"></i></a></p>
 						</div>
 					</div>
 				</div>
@@ -271,7 +286,7 @@
 					</div>
 					<div class="col-md-7 animate-box">
 						<div class="desc">
-							<h2>Robô para Juros Futuro (DI)</h2>
+							<h2>Robô Juros Futuro (DI)</h2>
 							<div class="features">
 								<span class="icon"><i class="icon-lightbulb"></i></span>
 								<div class="f-desc">
@@ -290,7 +305,7 @@
 									<p>Opere pelo método quantitativo mais novo do mercado brasileiro. Opere de forma ágil e precisa com controle de risco automático, parametrização de entradas parciais e gerenciamento de carteira em tempo real. E o melhor, tudo isso em um só lugar!</p>
 								</div>
 							</div>
-							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Start collaborating <i class="icon-arrow-right3"></i></a></p>
+							<p><a href="#" class="btn btn-primary btn-outline with-arrow">Conhecer mais <i class="icon-arrow-right3"></i></a></p>
 						</div>
 					</div>
 				</div>
@@ -306,8 +321,8 @@
 							<div class="counter-entry">
 								<span class="icon"><i class="flaticon-ribbon"></i></span>
 								<div class="desc">
-									<span class="colorlib-counter js-counter" data-from="0" data-to="1500" data-speed="5000" data-refresh-interval="50"></span>
-									<span class="colorlib-counter-label">Of customers are satisfied with our professional support</span>
+									<span class="colorlib-counter js-counter" data-from="0" data-to="68" data-speed="5000" data-refresh-interval="50"></span>
+									<span class="colorlib-counter-label">ativos em Long & Short</span>
 								</div>
 							</div>
 						</div>
@@ -315,17 +330,17 @@
 							<div class="counter-entry">
 								<span class="icon"><i class="flaticon-church"></i></span>
 								<div class="desc">
-									<span class="colorlib-counter js-counter" data-from="0" data-to="500" data-speed="5000" data-refresh-interval="50"></span>
-									<span class="colorlib-counter-label">Amazing preset options to be mixed and combined</span>
+									<span class="colorlib-counter js-counter" data-from="0" data-to="612000" data-speed="5000" data-refresh-interval="50"></span>
+									<span class="colorlib-counter-label">mil cálculos por minuto</span>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4 text-center animate-box">
 							<div class="counter-entry">
-								<span class="icon"><i class="flaticon-dove"></i></span>
+								<span class="icon"><i class="flaticon-ribbon"></i></span>
 								<div class="desc">
-									<span class="colorlib-counter js-counter" data-from="0" data-to="1200" data-speed="5000" data-refresh-interval="50"></span>
-									<span class="colorlib-counter-label">Average response time on live chat support channel</span>
+									<span class="colorlib-counter js-counter" data-from="0" data-to="15" data-speed="5000" data-refresh-interval="50"></span>
+									<span class="colorlib-counter-label">ativos com opções</span>
 								</div>
 							</div>
 						</div>
@@ -334,38 +349,34 @@
 			</div>
 		</div>
 
-		<div class="colorlib-blog">
+		<div class="colorlib-work-featured colorlib-bg-white">
 			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-						<h2>News from our Blog</h2>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+				<div class="row mobile-wrap">
+					<div class="col-md-5 col-md-push-7 animate-box">
+						<div class="mobile-img" style="background-image: url(images/mobile-1.jpg);"></div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 animate-box">
-						<article>
-							<h2>Building the Mention Sales Application on Unapp</h2>
-							<p class="admin"><span>May 12, 2018</span></p>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							<p class="author-wrap"><a href="#" class="author-img" style="background-image: url(images/person1.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p>
-						</article>
-					</div>
-					<div class="col-md-4 animate-box">
-						<article>
-							<h2>Building the Mention Sales Application on Unapp</h2>
-							<p class="admin"><span>May 12, 2018</span></p>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							<p class="author-wrap"><a href="#" class="author-img" style="background-image: url(images/person2.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p>
-						</article>
-					</div>
-					<div class="col-md-4 animate-box">
-						<article>
-							<h2>Building the Mention Sales Application on Unapp</h2>
-							<p class="admin"><span>May 12, 2018</span></p>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
-							<p class="author-wrap"><a href="#" class="author-img" style="background-image: url(images/person3.jpg);"></a> <a href="#" class="author">by Dave Miller</a></p>
-						</article>
+					<div class="col-md-7 col-md-pull-5 animate-box">
+						<div class="desc">
+							<h2>Acesse pelo celular!</h2>
+							<div class="features">
+								<span class="icon"><i class="icon-lightbulb"></i></span>
+								<div class="f-desc">
+									<p>Acompanhe suas operações de onde estiver.</p>
+								</div>
+							</div>
+							<div class="features">
+								<span class="icon"><i class="icon-circle-compass"></i></span>
+								<div class="f-desc">
+									<p>Receba notificações a cada mudança de status das operações abertas. </p>
+								</div>
+							</div>
+							<div class="features">
+								<span class="icon"><i class="icon-beaker"></i></span>
+								<div class="f-desc">
+									<p>Gerencie sua carteira na palma de sua mão. </p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -376,8 +387,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center colorlib-heading animate-box">
-						<h2>Already trusted by over 10,000 users</h2>
-						<p>Subscribe to receive unapp tips from instructors right to your inbox.</p>
+						<h2>Já somos milhares de investidores quantitativos, torne-se um você também!</h2>
+						<p>Inscreva-se em nossa newsletter e fique por dentro das novidades da plataforma.</p>
 					</div>
 				</div>
 				<div class="row animate-box">
@@ -387,12 +398,12 @@
 							<form class="form-inline qbstp-header-subscribe">
 								<div class="col-three-forth">
 									<div class="form-group">
-										<input type="text" class="form-control" id="email" placeholder="Enter your email">
+										<input type="text" class="form-control" id="email" placeholder="Digite seu email">
 									</div>
 								</div>
 								<div class="col-one-third">
 									<div class="form-group">
-										<button type="submit" class="btn btn-primary">Subscribe Now</button>
+										<button type="submit" class="btn btn-primary">Inscrever</button>
 									</div>
 								</div>
 							</form>
@@ -407,8 +418,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-						<h2>Pricing</h2>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name</p>
+						<h2>Preços</h2>
+						<p>Fizemos os planos sob medida para você e seu bolso, negocie conosco!</p>
 					</div>
 				</div>
 				<div class="row">
